# press

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SENTRY_SETUP.md  fly.toml  justfile  main.py  pyproject.toml  pytest.ini  roadmap.md
.beads/: issues.jsonl
.claude/: CLAUDE.md
.github/workflows/: backup-health-check.yml  ci.yml  database-backup.yml  preview.yml  release.yml
alembic/: env.py
alembic/versions/: 1585147ccb65_add_storage_type_to_scrolls.py  1814fddc9a60_add_data_column_to_sessions_table_for_.py  23c7a3d4442f_add_license_field_to_scrolls_table.py  2a3b4c5d6e7f_add_entry_point_to_scrolls.py  2c44b55a3bd6_initial_database_schema.py  2cb79e9ccf38_make_scroll_user_id_nullable_for_.py  3412d56964a6_rename_previews_table_to_scrolls.py  39ba54fcd32b_enable_rls_and_add_security_policies.py  3f51169c08c8_add_last_accessed_at_to_scrolls.py  596bb368fc0d_add_orcid_id_to_users.py  8c350734dd3a_initial_migration_with_all_tables_.py  a1b2c3d4e5f6_add_orcid_id_to_users.py  a1b2c3d4e5f6_add_slug_and_publication_year_to_scrolls.py  a1c0afb70d7e_add_atproto_fields_to_scrolls.py  b4c9a0f2a445_add_doi_fields_to_scrolls_table.py  (+7 more)
app/: config.py  database.py  exception_handlers.py  logging_config.py  memory_profiling_middleware.py  middleware.py  og_image.py  seed.py  sentry_config.py  templates_config.py
app/auth/: csrf.py  (+6 more)
docs/: AUTHENTICATION.md  DATABASE.md  DEPLOYMENT.md  GDPR.md  SENTRY_SETUP.md  TESTING.md  build.sh  docs-meta-template.html  faq.md  quick-start.md
scripts/: email_health_check.py  install-hooks.sh  publish_atproto.py  reset_db.py  run-e2e-tests.sh  seed.py  update_roadmap.py
seed_papers/: README.md  damped_oscillator_widget.html  damped_oscillators.css  damped_oscillators.md  damped_oscillators.rsm  generate_damped_widget.py  generate_roc_widget.py  graph_traversal.ipynb  graph_traversal.md  inline_myst_assets.py  inline_rsm_assets.py  iris_analysis.qmd  roc_curves.md  roc_curves.rsm  spectral_theorem.typ
templates/: base.html  index.html
tests/: conftest.py  test_admin_notifications.py  test_alternate_representations.py  test_api_scrolls.py  test_api_v1.py  test_archive_processor.py  test_archive_serving.py  test_auth.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_utils.py  test_canonical_url_templates.py  test_content_addressable.py  test_content_addressable_e2e.py  test_content_addressable_integration.py  test_csrf.py  test_data_export.py  test_doi_badge.py  test_email_service.py  test_email_verification.py  test_entry_point.py  test_error_handling.py  test_export_functionality.py  test_file_upload_frontend.py  test_form_routes.py  test_google_scholar_meta.py  test_homepage_debug.py  test_license_functionality.py  test_main.py  test_models.py  test_orcid.py  test_orcid_badge.py  test_orcid_buttons.py  test_orcid_oauth.py  test_partials_not_blocked.py  test_password_change.py  test_password_reset.py  test_password_strength.py  test_preview_flow_integration.py  test_preview_functionality.py  (+32 more)
(+171 files in other folders)
