[project]
name = "press"
version = "0.1.0"
description = "Modern preprint server for HTML-based research manuscripts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.11.7",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-xdist>=3.3.1",
    "httpx>=0.25.2",
    "aiosqlite>=0.19.0",
]
