[project]
name = "press"
version = "0.1.0"
description = "Modern preprint server for HTML-based research manuscripts"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7",
    "alembic>=1.12.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.11.7",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.26.0",
    "pytest-xdist>=3.3.1",
    "httpx>=0.25.2",
    "aiosqlite>=0.19.0",
    "bleach>=6.1.0",
    "python-magic>=0.4.27",
    "ruff>=0.1.6",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.3",
    "sentry-sdk[fastapi]>=1.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
    "desktop: marks tests as desktop-only (deselect with '-m \"not desktop\"')",
    "mobile: marks tests as mobile-only (deselect with '-m \"not mobile\"')"
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.websockets_impl"
]

[tool.ruff]
fix = true  # Automatically fix issues when possible
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I"]  # Enable pycodestyle errors, pyflakes, and isort
ignore = ["E501"]  # Ignore line too long errors
extend-safe-fixes = ["I"]  # Always apply isort fixes

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["app"]
split-on-trailing-comma = true

# Configure other linters to use same line length
[tool.flake8]
max-line-length = 99
ignore = "E501"

[tool.pylint.format]
max-line-length = 99

[tool.pylint.messages_control]
disable = "line-too-long"

[tool.black]
line-length = 99

# VS Code Python extension settings
[tool.autopep8]
max_line_length = 99
ignore = "E501"

# Python LSP Server (pylsp) configuration for Emacs
[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.pycodestyle]
max_line_length = 99
ignore = "E501"

[tool.pydocstyle]
max_line_length = 99
